Improved backend and swagger, finally getting rid of directly accessing the protected mapping class. Added pagination
